Fix post title color contrast

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -169,7 +169,7 @@ body {
   color: #fff;
 }
 
-.post-title {
+.post-header .post-title {
   margin: 0.8rem 0 0.3rem;
   font-size: 2.2rem;
   color: #fff;
